# spot-spot-relay-arbitrage

./: .gitignore  AZURE_VM_SETUP.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMMANDS.md  GITHUB_AZURE_SETUP.md  MUSTREAD.md  PROJECT_STRUCTURE.md  README.md  config.py  config.yaml  main.py  package-lock.json  package.json  pyproject.toml  run_bot.sh  run_checklist.md  run_monitor.sh  tradingview.txt  tradingview_kimchi.txt
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/premiums/: route.ts
dashboard/src/app/api/relay/: route.ts
dashboard/src/app/relay/: page.tsx
docs/: API_SETUP_GUIDE.md  AZURE_VM_GUIDE.md  FIXES_COMPLETED.md  TRADING_COMMANDS.md
kimp_arb_cpp/: CMakeLists.txt  MUSDT.md  README.md  README_AI.md  TODO.md  benchmark_optimized.cpp  benchmark_python.py  benchmark_test.cpp  conanfile.py  conanfile.txt
kimp_arb_cpp/config/: config.yaml
kimp_arb_cpp/data/: premiums.json
kimp_arb_cpp/docs/: OPTIMIZATION.md
kimp_arb_cpp/include/kimp/core/: config.hpp  dotenv.hpp  latency_probe.hpp  logger.hpp  optimization.hpp  price_format.hpp  simd_premium.hpp  types.hpp
kimp_arb_cpp/include/kimp/exchange/: exchange_base.hpp
kimp_arb_cpp/include/kimp/exchange/bithumb/: bithumb.hpp
kimp_arb_cpp/include/kimp/exchange/bybit/: bybit.hpp  bybit_private_ws.hpp  bybit_trade_ws.hpp
kimp_arb_cpp/include/kimp/exchange/gateio/: gateio.hpp
kimp_arb_cpp/include/kimp/exchange/okx/: okx.hpp  okx_trade_ws.hpp
kimp_arb_cpp/include/kimp/exchange/upbit/: upbit.hpp
kimp_arb_cpp/include/kimp/execution/: lifecycle_executor.hpp  order_manager.hpp
kimp_arb_cpp/include/kimp/memory/: atomic_bitset.hpp  object_pool.hpp  ring_buffer.hpp
kimp_arb_cpp/include/kimp/network/: connection_pool.hpp  websocket_client.hpp  ws_broadcast_server.hpp
kimp_arb_cpp/include/kimp/strategy/: arbitrage_engine.hpp  entry_selection_bitmap.hpp  spot_relay_scanner.hpp
kimp_arb_cpp/include/kimp/utils/: crypto.hpp
kimp_arb_cpp/scripts/: build.sh
kimp_arb_cpp/src/: main.cpp
kimp_arb_cpp/src/core/: config.cpp  dotenv.cpp  latency_probe.cpp
kimp_arb_cpp/src/exchange/: bithumb.cpp  bybit.cpp  bybit_trade_ws.cpp  gateio.cpp  okx.cpp  okx_trade_ws.cpp  rest_client.cpp  upbit.cpp
kimp_arb_cpp/src/execution/: order_manager.cpp
kimp_arb_cpp/src/network/: websocket_client.cpp  ws_broadcast_server.cpp
kimp_arb_cpp/src/strategy/: arbitrage_engine.cpp  spot_relay_scanner.cpp
kimp_arb_cpp/tests/: LIVE_TESTS.md  bench_latency_probe.cpp  bench_latency_probe_hotpath.cpp  live_step_example.py  test_atomic_bitset.cpp  test_bithumb_private_ws.cpp  test_bithumb_ws.cpp  test_bybit_orderbook_ws.cpp  test_check.hpp  test_close_ada_short.cpp  test_e2e_pipeline.cpp  test_entry_pipeline_steps.cpp  test_entry_selection.cpp  test_entry_selection_bitmap.cpp  test_entry_signal_capacity.cpp  test_export_async_stability.cpp  test_fill_parsing.cpp  test_init_section1.cpp  test_init_section2.cpp  test_latency_probe.cpp  test_lifecycle_executor.cpp  test_live_entry_selection.cpp  test_live_hedge_accuracy.cpp  test_live_margin_setup.cpp  test_live_pair_roundtrip.cpp  test_live_smoke_common.hpp  test_live_step_by_step.cpp  test_live_trade_common.hpp  test_market_data.cpp  test_multicoin_hedge.cpp  test_order_manager_pnl.cpp  test_parallel_fill.cpp  test_price_format.cpp  test_price_verify.cpp  test_section5_hedge.cpp  test_sections_1_to_4.cpp  test_sections_6_to_8.cpp  test_symbol_matching.cpp
kimp_arb_cpp/tests/integration/: diag_gap_accuracy.cpp  diag_trade.cpp
scripts/: azure_vm_connect.sh  deploy_to_azure.sh  run-spot-relay-web.sh  secure_env_transfer.sh  spot-relay-live.mjs  start_trading.sh
scripts/lib/: spot-relay-math.mjs  spot-relay-math.test.mjs  spot-relay-monitor.integration.test.mjs  spot-relay-snapshot.mjs  spot-relay-snapshot.test.mjs
src/: __init__.py
src/exchanges/: __init__.py  base.py  bithumb.py  connector.py  gate.py  okx.py  upbit.py
src/models/: __init__.py  models.py
src/strategies/: split_entry_strategy.py
src/utils/: __init__.py  logger.py  premium_calculator.py
tests/: __init__.py  debug_bithumb.py  test_all_exchanges.py  test_bithumb_v2.py  test_exchanges.py  test_premium_calculation.py  test_quick_setup.py  test_split_entry.py  test_verify_exchanges.py
